[package]
name = "colloquy"
version = "0.1.3"
authors = ["nick black <dankamongmen@gmail.com>"]
edition = "2018"
repository = "https://github.com/dankamongmen/notcurses"
license = "Apache-2.0"
description = "Notcurses-based utility for command-line TUI widgets"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"

[dependencies]
libc = ">= 0.2.66"
notcurses = ">= 1.6.6"
#notcurses = { path = "/home/dank/src/dankamongmen/notcurses/rust/notcurses" , version="^1.4.2" }
libnotcurses-sys = ">= 1.6.6"
#libnotcurses-sys = { path = "/home/dank/src/dankamongmen/notcurses/rust/libnotcurses-sys" , version="1.4.2" }

[dependencies.clap]
version = ">= 2.33.0"
default-features = false
features = ["yaml", "color", "suggestions"]

[dev-dependencies]
all_asserts = ">= 1.0.0"
serial_test = ">= 0.4.0"
serial_test_derive = ">= 0.4.0"
